[package]
name = "egui_demo_app"
version = "0.12.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.12.0", path = "../eframe", features = ["time"] }
egui_demo_lib = { version = "0.12.0", path = "../egui_demo_lib" }

[features]
default = ["persistence"]
http = ["eframe/http", "egui_demo_lib/http"]
persistence = ["eframe/persistence", "egui_demo_lib/persistence"]
screen_reader = ["eframe/screen_reader"] # experimental
syntax_highlighting = ["egui_demo_lib/syntax_highlighting"]
