[package]
name = "egui_demo_lib"
version = "0.17.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
description = "Example library for egui"
edition = "2021"
rust-version = "1.60"
homepage = "https://github.com/emilk/egui/tree/master/egui_demo_lib"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emilk/egui/tree/master/egui_demo_lib"
categories = ["gui", "graphics"]
keywords = ["glium", "egui", "gui", "gamedev"]
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true

[lib]


[features]
default = []

# Enable additional checks if debug assertions are enabled (debug builds).
extra_debug_asserts = ["egui/extra_debug_asserts"]
# Always enable additional checks.
extra_asserts = ["egui/extra_asserts"]

chrono = ["egui_extras/datepicker", "dep:chrono"]
serde = ["egui/serde", "dep:serde"]
syntax_highlighting = ["syntect"]


[dependencies]
egui = { version = "0.17.0", path = "../egui", default-features = false }

chrono = { version = "0.4", optional = true, features = ["js-sys", "wasmbind"] }
egui_extras = { version = "0.17.0", path = "../egui_extras", optional = true }
enum-map = { version = "2", features = ["serde"] }
serde = { version = "1", optional = true, features = ["derive"] }
syntect = { version = "4", optional = true, default-features = false, features = ["default-fancy"] }
tracing = "0.1"
unicode_names2 = { version = "0.5.0", default-features = false }


[dev-dependencies]
criterion = { version = "0.3", default-features = false }


[[bench]]
name = "benchmark"
harness = false
