[package]
name = "egui_dynamic_grid"
version = "0.16.0"
edition = "2018"
description = "Dynamic grid and table for egui"
authors = [
    "René Rössler <rene@freshx.de>",
    "Dominik Rössler <dominik@freshx.de>",
]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/emilk/egui/tree/master/egui_dynamic_grid"
readme = "README.md"
repository = "https://github.com/emilk/egui/tree/master/egui_dynamic_grid"
categories = ["gui", "graphics"]
keywords = ["glium", "egui", "gui", "gamedev"]
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[dependencies]
egui = { version = "0.16.0", path = "../egui", default-features = false }
