[package]
name = "egui_glium"
version = "0.18.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
description = "Bindings for using egui natively using the glium library"
edition = "2021"
rust-version = "1.60"
homepage = "https://github.com/emilk/egui/tree/master/egui_glium"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emilk/egui/tree/master/egui_glium"
categories = ["gui", "game-development"]
keywords = ["glium", "egui", "gui", "gamedev"]
include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
  "src/shader/*.glsl",
]

[package.metadata.docs.rs]
all-features = true


[features]
default = ["clipboard", "links"]

# enable cut/copy/paste to OS clipboard.
# if disabled a clipboard will be simulated so you can still copy/paste within the egui app.
clipboard = ["egui-winit/clipboard"]

# enable opening links in a browser when an egui hyperlink is clicked.
links = ["egui-winit/links"]

# experimental support for a screen reader.
screen_reader = ["egui-winit/screen_reader"]


[dependencies]
egui = { version = "0.18.0", path = "../egui", default-features = false, features = [
  "bytemuck",
] }
egui-winit = { version = "0.18.0", path = "../egui-winit", default-features = false }

ahash = "0.7"
bytemuck = "1.7"
glium = "0.31"


[dev-dependencies]
image = { version = "0.24", default-features = false, features = ["png"] }
