[package]
name = "egui_glium_sample"
version = "0.1.0"
authors = ["t18b219k <t18b219k@mail.cc.niigata-u.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_glium = {path="../egui_glium"}
epi={path="../epi"}
egui={path="../egui"}
glium = "0.29.0"
cgmath = "0.18.0"