[package]
name = "egui_glow_painter"
version = "0.14.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
description = "Bindings for using egui natively using the glow library"
edition = "2018"
homepage = "https://github.com/emilk/egui/tree/master/egui_glow"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emilk/egui/tree/master/egui_glow"
categories = ["gui", "game-development"]
keywords = ["glow", "egui", "gui", "gamedev"]
include = [
    "../LICENSE-APACHE",
    "../LICENSE-MIT",
    "**/*.rs",
    "Cargo.toml",
    "src/shader/*.glsl",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
egui = { version = "0.14.0", path = "../egui", default-features = false, features = ["single_threaded"] }
epi = { version = "0.14.0", path = "../epi", optional = true }
glow = "0.11"
memoffset = "0.6"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
glutin = { version = "0.24", optional = true }
sdl2 = { version = "0.34", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features=["HtmlCanvasElement", "WebGl2RenderingContext", "Window","console"] }
wasm-bindgen = { version = "0.2" }