[package]
name = "egui_http_web"
version = "0.10.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
description = "Bindings for compiling egui code to WASM for a web page"
license = "MIT OR Apache-2.0"
edition = "2018"
homepage = "https://github.com/emilk/egui"
readme = "README.md"
repository = "https://github.com/emilk/egui"
categories = ["gui", "web-programming"]
keywords = ["wasm", "web", "egui", "gui", "gamedev"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "src/shader/*.glsl",
]
[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
http = ["epi/http"]

[dependencies]
epi = { version = "0.10.0", path = "../epi" }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
[dependencies.web-sys]
version = "0.3"
features=["Headers","Request","RequestInit","RequestMode","Response"]