[package]
name = "egui_web"
version = "0.11.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
description = "Bindings for compiling egui code to WASM for a web page"
license = "MIT OR Apache-2.0"
edition = "2018"
homepage = "https://github.com/emilk/egui"
readme = "README.md"
repository = "https://github.com/emilk/egui"
categories = ["gui", "web-programming"]
keywords = ["wasm", "web", "egui", "gui", "gamedev"]
include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
  "src/shader/*.glsl",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui = { version = "0.11.0", path = "../egui", default-features = false, features = ["single_threaded"] }
epi = { version = "0.11.0", path = "../epi" }
js-sys = "0.3"
ron = { version = "0.6", optional = true }
serde = { version = "1", optional = true }
tts = { version = "0.15", optional = true } # feature screen_reader
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[features]
default = ["default_fonts"]

# If set, egui will use `include_bytes!` to bundle some fonts.
# If you plan on specifying your own fonts you may disable this feature.
default_fonts = ["egui/default_fonts"]
http = [
  "epi/http",
  "web-sys/Headers",
  "web-sys/Request",
  "web-sys/RequestInit",
  "web-sys/RequestMode",
  "web-sys/Response",
]
persistence = ["egui/persistence", "ron", "serde"]
screen_reader = ["tts"] # experimental

[dependencies.web-sys]
version = "0.3"
features = [
  "Clipboard",
  "ClipboardEvent",
  "console",
  "CompositionEvent",
  "CssStyleDeclaration",
  "DataTransfer",
  "Document",
  "DomRect",
  "Element",
  "Event",
  "EventListener",
  "EventTarget",
  "FocusEvent",
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlInputElement",
  "InputEvent",
  "KeyboardEvent",
  "Location",
  "MouseEvent",
  "Navigator",
  "Performance",
  "Storage",
  "Touch",
  "TouchEvent",
  "TouchList",
  "WebGl2RenderingContext",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlRenderingContext",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
  "WheelEvent",
  "Window",
]
