[package]
name = "egui_wgpu"
version = "0.18.0"
description = "Bindings for using egui natively using the wgpu library"
authors = [
    "Nils Hasenbanck <nils@hasenbanck.de>",
    "embotech <opensource@embotech.com>",
]
edition = "2021"


[dependencies]
egui = { version = "0.18.1", path = "../egui", default-features = false, features = [
    "bytemuck",
] }

bytemuck = "1.7"
pollster = "0.2"
wgpu = "0.12"
winit = "0.26"
