[package]
name = "emath"
version = "0.13.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
description = "Minimal 2D math library for GUI work"
edition = "2018"
homepage = "https://github.com/emilk/egui"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emilk/egui"
categories = ["mathematics", "gui"]
keywords = ["math", "gui"]
include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
]

[lib]

[dependencies]
# Add compatability with https://github.com/kvark/mint
mint = { version = "0.5.6", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []

# Enable additional checks if debug assertions are enabled (debug builds).
extra_debug_asserts = []
# Always enable additional checks.
extra_asserts = []
