[package]
name = "emath"
version = "0.18.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
description = "Minimal 2D math library for GUI work"
edition = "2021"
rust-version = "1.60"
homepage = "https://github.com/emilk/egui/tree/master/emath"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emilk/egui/tree/master/emath"
categories = ["mathematics", "gui"]
keywords = ["math", "gui"]
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true

[lib]


[features]
default = []

# Enable additional checks if debug assertions are enabled (debug builds).
extra_debug_asserts = []
# Always enable additional checks.
extra_asserts = []


[dependencies]
# Optional:
bytemuck = { version = "1.7.2", optional = true, features = ["derive"] }
mint = { version = "0.5.6", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
