[package]
name = "emgui_wasm"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emilernerfeldt@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lazy_static = "1"
serde = "1"
serde_json = "1"
wasm-bindgen = "0.2"
# web-sys = { version = "0.3.5", features = ['console', 'Performance', 'Window'] }

emgui = { path = "../emgui" }
